syntax = "proto3";

package approval;

// Approval Processing Service와 통신하는 서비스 정의
service Approval {
  // 1. 결재 요청 정보를 Processing Service로 전달
  rpc RequestApproval (ApprovalRequest) returns (ApprovalResponse);

  // 2. Processing Service로부터 결재 결과를 전달받음
  rpc ReturnApprovalResult(ApprovalResultRequest) returns (ApprovalResultResponse);
}

// 데이터 구조체 (Message) 정의

message Step {
  int32 step = 1;
  int32 approverId = 2;
  string status = 3; // pending, approved, rejected
}

message ApprovalRequest {
  int32 requestId = 1;
  int32 requesterId = 2;
  string title = 3;
  string content = 4;
  repeated Step steps = 5; // List<Step>과 동일
}

message ApprovalResponse {
  string status = 1; // "received" 등 처리 상태
}

message ApprovalResultRequest {
  int32 requestId = 1;
  int32 step = 2;
  int32 approverId = 3;
  string status = 4; // approved or rejected
}

message ApprovalResultResponse {
  string status = 1;
}